--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.2",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-number-format": "^5.4.2"
+    "react-number-format": "^5.4.2",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
