--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.2",
+    "@types/acl": "^0.4.44",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "gh-pages": "^6.1.1",
