--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.2",
+    "@mui/material": "^6.4.7",
+    "@mui/system": "^6.4.7",
     "@types/acl": "^0.4.44",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
