--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "msw": "^0.49.3",
     "sass-embedded": "^1.83.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
